--- a/src/index.css
+++ b/src/index.css
@@ -4,44 +4,71 @@
 
 body {
   margin: 0;
+  padding: 0;
+  background: url(./images/background.jpg);
+  background-size: cover;
+  font-weight: bold;
+  font-family: sans-serif;
 }
 
-.nav {
-  background-color: rgb(255, 136, 0);
-  color: white;
-  display: flex;
-  justify-content: left;
-  align-items: stretch;
-  gap: 2rem;
-  padding: 0 1rem;
+nav {
+  overflow: hidden;
+  background: #ff9100;
+  line-height: 40px;
+}
+
+nav a {
+  float: left;
+  display: block;
+  width: 100px;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+nav a:hover {
+  background: #ff6600;
+}
+
+nav a.active {
+  background: black;
+}
+
+nav .container {
+  float: right;
+  margin-right: 50px;
+  margin-top: 10px;
+}
+
+nav input[type=text], input[type=password] {
+  padding: 6px;
+  margin-top: 8px;
+  margin-left: 15px;
+  font-size: 17px;
+  border: none;
+  width: 150px;
+}
+
+.container button {
+  float: right;
+  padding: 6px;
+  margin-top: 8px;
+  margin-right: 16px;
+  margin-left: 15px;
+  background: rgb(255, 94, 0);
+  color: #fff;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.container button:hover {
+  background: rgb(78, 29, 0);;
 }
 
 .title {
-  font-size: 2rem;
+  font-size: 200%;
+  width: 200px;
 }
-
-.nav ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  display: flex;
-  gap: 1rem;
-}
-
-.nav a {
-  color: inherit;
-  text-decoration: none;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  padding: .25rem;
-}
-
-.nav li.active {
-  background-color: #555;
-}
-
-.nav li:hover {
-  background-color: rgb(255, 100, 0);
-}
-
