--- a/Client/src/components/Navbar.css
+++ b/Client/src/components/Navbar.css
@@ -56,7 +56,7 @@ nav input[type=text], input[type=password] {
 }
 
 .container button:hover {
-  background: rgb(78, 29, 0);;
+  background: rgb(78, 29, 0);
 }
 
 .title {
