--- a/Client/src/components/SearchPage.css
+++ b/Client/src/components/SearchPage.css
@@ -2,3 +2,41 @@
     display: flex;
     justify-content: center;
 }
+
+.search-slogan-1 {
+    display: flex;
+    justify-content: center;
+}
+
+.search-slogan-2 {
+    display: flex;
+    justify-content: center;
+}
+
+.search-form {
+    display: flex;
+    justify-content: center;
+}
+
+input[type=text].searchbar {
+    padding: 10px;
+    margin-top: 50px;
+    font-size: 17px;
+    border: none;
+    width: 600px;
+}
+
+.search-button {
+    padding: 10px;
+    margin-left: 15px;
+    margin-top: 50px;
+    background: rgb(255, 94, 0);
+    color: #fff;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+}
+
+.search-button:hover {
+    background: rgb(78, 29, 0);
+}
