--- a/Client/src/components/SearchPage.css
+++ b/Client/src/components/SearchPage.css
@@ -14,22 +14,24 @@
 }
 
 .search-form {
+    padding-top: 50px;
     display: flex;
     justify-content: center;
 }
 
 input[type=text].searchbar {
     padding: 10px;
-    margin-top: 50px;
+    margin-top: 0px;
     font-size: 17px;
     border: none;
     width: 600px;
+    height: 40px;
 }
 
-.search-button {
-    padding: 10px;
+.searchPage-search-button {
+    margin-top: 0px;
     margin-left: 15px;
-    margin-top: 50px;
+    width: 150px;
     background: rgb(255, 94, 0);
     color: #fff;
     font-size: 17px;
@@ -37,6 +39,6 @@ input[type=text].searchbar {
     cursor: pointer;
 }
 
-.search-button:hover {
+.searchPage-search-button:hover {
     background: rgb(78, 29, 0);
 }
