--- a/Client/src/components/UploadPage.css
+++ b/Client/src/components/UploadPage.css
@@ -8,6 +8,47 @@ body {
     color: white;
 }
 
+li p {
+    flex: 1;
+}
+
+li svg {
+    font-size: 25px;
+    margin-right: 20px;
+}
+
+.file-list {
+    margin-left: 0px;
+    padding-left: 0px;
+}
+
+.list-item {
+    list-style: none;
+    width: 500px;
+    height: 60px;
+    margin: 20px;
+    background-color: rgba(255, 94, 0, 0.39);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 50px;
+}
+
+.fa-spin {
+    font-size: 25px;
+}
+
+.file-list-box {
+    display: flex;
+    justify-content: center;
+}
+
+.actions {
+    justify-self: flex-end;
+    cursor: pointer;
+}
+
 .upload-title {
     display: flex;
     justify-content: center;
