--- a/Client/src/components/SearchPage.css
+++ b/Client/src/components/SearchPage.css
@@ -19,18 +19,35 @@
     justify-content: center;
 }
 
-input[type=text].searchbar {
+.keyword-input {
     padding: 10px;
-    margin-top: 0px;
+    margin: 10px;
     font-size: 17px;
     border: none;
     width: 600px;
     height: 40px;
 }
 
+.course-code-input {
+    padding: 10px;
+    margin: 10px;
+    font-size: 17px;
+    border: none;
+    width: 125px;
+    height: 40px;
+}
+
+.subject-dropdown {
+    padding: 10px;
+    margin: 10px;
+    font-size: 17px;
+    border: none;
+    width: 125px;
+    height: 40px;
+}
+
 .searchPage-search-button {
-    margin-top: 0px;
-    margin-left: 15px;
+    margin: 10px;
     width: 150px;
     background: rgb(255, 94, 0);
     color: #fff;
