--- a/Client/src/components/UploadPage.css
+++ b/Client/src/components/UploadPage.css
@@ -127,3 +127,11 @@ li svg {
     margin-right: 0.8em;
     font-size: 0.8em;
 }
+
+.input-tags {
+    border: none;
+    width: 300px;
+    height: 50px;
+    font-size: 18px;
+    padding-left: 10px;
+}
