--- a/Client/src/components/UploadPage.css
+++ b/Client/src/components/UploadPage.css
@@ -135,3 +135,15 @@ li svg {
     font-size: 18px;
     padding-left: 10px;
 }
+
+.submit-files-button {
+    margin-top: 30px;
+    border: none;
+    border-radius: 5px;
+    padding: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: rgb(255, 94, 0);
+    color: white;
+    font-size: 15px;
+}
