Add buttons to home

--- a/Client/src/components/HomePage.css
+++ b/Client/src/components/HomePage.css
@@ -12,3 +12,27 @@
     display: flex;
     justify-content: center;
 }
+
+.view-classes-button {
+    
+}
+
+.view-classes-image {
+    width: 400px;
+}
+
+.browse-notes-button {
+    
+}
+
+.browse-notes-image {
+    width: 400px;
+}
+
+.ask-question-button {
+    
+}
+
+.ask-question-image {
+    width: 400px;
+}
