--- a/Client/src/components/HomePage.css
+++ b/Client/src/components/HomePage.css
@@ -13,14 +13,15 @@
     justify-content: center;
 }
 
-.view-classes-button {
+.task-button {
     margin: 15px;
     border: none;
     background-color: rgb(255, 94, 0);
     padding-top: 5px;
+    border-radius: 10px;
 }
 
-.view-classes-button:hover {
+.task-button:hover {
     background-color: rgb(78, 29, 0);
 }
 
@@ -28,30 +29,8 @@
     width: 350px;
 }
 
-.browse-notes-button {
-    margin: 15px;
-    border: none;
-    background-color: rgb(255, 94, 0);
-    padding-top: 5px;
-}
-
-.browse-notes-button:hover {
-    background-color: rgb(78, 29, 0);
-}
-
 .browse-notes-image {
     width: 350px;
-}
-
-.ask-question-button {
-    margin: 15px;
-    border: none;
-    background-color: rgb(255, 94, 0);
-    padding-top: 5px;
-}
-
-.ask-question-button:hover {
-    background-color: rgb(78, 29, 0);
 }
 
 .ask-question-image {
