--- a/Client/src/components/RegisterPage.css
+++ b/Client/src/components/RegisterPage.css
@@ -35,6 +35,7 @@
 }
 
 .register-button {
+    display: flex;
     padding: 6px;
     margin-left: 10px;
     margin-top: 20px;
@@ -78,4 +79,20 @@
 .show-password {
     padding: 6px;
     margin: 10px;
+}
+
+.google-profile {
+    border: 3px solid var(--color-primary);
+    border-radius: 10px;
+    padding: 1rem;
+    text-align: center;
+    margin: auto;
+    width: 50%;
+}
+
+.google-logout {
+    padding: 0.5rem 2rem;
+    background: var(--color-primary);
+    color: var(--color-light);
+    border-radius: 10px;
 }
