--- a/Client/src/components/UploadPage.css
+++ b/Client/src/components/UploadPage.css
@@ -58,11 +58,11 @@ li svg {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 94, 0, 0.226);
-    border: 3px dashed white;
-    padding: 50px;
-    width: 500px;
-    height: 500px;
+    border: none;
+    background: linear-gradient(to bottom right, var(--color-primary), var(--color-primary-variant));
+    border-radius: 20px;
+    margin: 1rem;
+    padding: 4rem;
     flex-direction: column;
 }
 
@@ -80,7 +80,7 @@ li svg {
     opacity: 0;
 }
 
-.upload-button {
+.btn-upload {
     position: absolute;
     top: 0px;
     left: 0px;
@@ -90,26 +90,22 @@ li svg {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
-    background-color: rgb(255, 94, 0);
+    color: var(--color-white);
+    background-color: var(--color-primary);
     font-size: 1.1rem;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 10px;
     border: none;
     outline: none;
-    box-shadow: 0px 8px 24px rgba(25, 28, 31, 0.5);
-}
-
-.upload-button:hover {
-    background-color: rgb(100, 37, 0);
+    box-shadow: 0px 0px 24px rgba(29, 29, 29, 0.774);
 }
 
 .plus-icon {
     width: 1.5em;
     height: 1.5em;
     padding: 0.4em;
-    background-color: white;
-    color: rgb(255, 94, 0);
+    background-color: var(--color-white);
+    color: var(--color-primary);
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -124,12 +120,14 @@ li svg {
     height: 50px;
     font-size: 18px;
     padding-left: 10px;
+    border-radius: 10px;
+    margin: 1rem 0rem;
 }
 
-.submit-files-button {
+.btn-submit {
     margin-top: 30px;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
