--- a/Client/src/components/Navbar.css
+++ b/Client/src/components/Navbar.css
@@ -29,9 +29,18 @@
   border-radius: 10px;
 }
 
-nav .container {
+nav .login {
   float: right;
   width: auto;
   margin-right: 2rem;
-  margin-top: 2rem;
+}
+
+.btn-signin {
+  display: block;
+  margin: 1.9rem auto;
+  padding: 0.5rem 2rem;
+  background: var(--color-primary);
+  color: var(--color-white);
+  border-radius: 10px;
+  font-weight: bold;
 }
