--- a/Client/src/components/Navbar.css
+++ b/Client/src/components/Navbar.css
@@ -29,7 +29,7 @@
   border-radius: 10px;
 }
 
-nav .login {
+.login {
   float: right;
   width: auto;
   margin-right: 2rem;
@@ -45,16 +45,25 @@ nav .login {
   font-weight: bold;
 }
 
+.google-profile {
+  display: flex;
+}
+
 .google-image {
   width: 30px;
+  height: 30px;
   border-radius: 50%;
+  border: 1.5px solid var(--color-primary);
+  margin-top: 2rem;
 }
 
 .btn-logout {
   display: block;
-  padding: 0.5rem 2rem;
+  height: 40px;
   background: var(--color-primary);
   color: var(--color-white);
   border-radius: 10px;
   font-weight: bold;
+  margin-top: 1.7rem;
+  margin-left: 0.5rem;
 }
