--- a/Client/src/components/UploadPage.css
+++ b/Client/src/components/UploadPage.css
@@ -95,7 +95,7 @@ li svg {
     font-size: 1.1rem;
     cursor: pointer;
     border-radius: 10px;
-    border: none;
+    border: 2px dashed var(--color-white);
     outline: none;
     box-shadow: 0px 0px 24px rgba(29, 29, 29, 0.774);
 }
