--- a/Client/src/components/SearchPage.css
+++ b/Client/src/components/SearchPage.css
@@ -72,19 +72,75 @@
     width: 30rem;
 }
 
+.note-list-wrapper {
+display: flex;
+justify-content: center;
+margin: 0 200px;
+}
+
 .note-list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 20px;
-  }
-  
-  .note-box {
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+.note-box {
+    position: relative;
     padding: 10px;
+    height: 300px;
+    outline: 4px solid orange;
+    width: 200px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
     cursor: pointer;
+    display: flex;
+    background-color: rgb(255, 255, 255, 0.25);
+    z-index: 0;
   }
   
-  .note-box:hover {
-    background-color: #f5f5f5;
+.note-box:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 40%;
+    background-color: orange;
+    z-index: -1;
+}
+
+.note-box-bottom {
+    margin-top: 100%;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.note-box .note-name {
+    line-height: 1;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.note-box .note-code {
+    font-weight: normal;
+    font-size: 15px;
+}
+
+.note-box .note-tags {
+    line-height: 1;
+    font-style: italic;
+    font-size: 0.8em;
+    font-size: 12px;
+}
+
+.note-box-bottom .note-name,
+.note-box-bottom .note-code,
+.note-box-bottom .note-tags {
+    word-wrap: break-word;
+    z-index: 1;
+}
+.note-box:hover {
+    transform: scale(1.05);
   }
