--- a/Client/src/components/ClassesPage.css
+++ b/Client/src/components/ClassesPage.css
@@ -21,7 +21,8 @@
     /* background-color: rgba(255, 94, 0, 0.226); */
 }
 
-.join-classes {
+.join-classes,
+.create-classes {
     width: 300px;
     float: right;
     border: 3px solid white;
