--- a/Client/src/components/ClassesPage.css
+++ b/Client/src/components/ClassesPage.css
@@ -5,13 +5,11 @@
 }
 
 .container-page {
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .content {
-    padding: 0px;
+    display: flex;
+    flex-direction: column;
 }
 
 .classes {
@@ -30,7 +28,8 @@
     padding: 1rem;
     width: 20rem;
     border-radius: 20px;
-    margin-left: 1rem;
+    margin-left: auto; 
+    margin-right: 2rem;
 }
 
 .footer {
@@ -63,6 +62,10 @@ input[type=text].class-input {
     border: none;
     cursor: pointer;
     width: 150px;
+}
+
+.no-classes {
+    margin-left: 1rem;
 }
 
 table, th, td {
