--- a/Client/src/components/SearchPage.css
+++ b/Client/src/components/SearchPage.css
@@ -90,15 +90,15 @@ margin: 0 200px;
     position: relative;
     padding: 10px;
     height: 300px;
-    outline: 4px solid var(--color-primary);
     width: 200px;
-    border-radius: 10px;
+    border-radius: 20px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     display: flex;
     background-color: rgb(255, 255, 255, 0.25);
     z-index: 0;
     margin-top: 1rem;
+    border: 1px solid var(--color-white);
   }
   
 .note-box:before {
@@ -107,45 +107,24 @@ margin: 0 200px;
     bottom: 0;
     left: 0;
     right: 0;
-    height: 40%;
+    height: 50%;
     background: linear-gradient(to bottom right, var(--color-primary), var(--color-primary-variant));
     z-index: -1;
+    border-radius: 0px 0px 20px 20px;
 }
 
 .note-box-bottom {
-    margin-top: 100%;
+    margin-top: 10rem;
     flex-direction: column;
     overflow: hidden;
 }
 
-.note-box .note-name {
-    line-height: 1;
-    font-weight: bold;
-    font-size: 15px;
-}
-
-.note-box .note-code {
-    font-weight: normal;
-    font-size: 15px;
-}
-
-.note-box .note-tags {
-    line-height: 1;
-    font-style: italic;
-    font-size: 0.8em;
-    font-size: 12px;
-}
-
-.note-box-bottom .note-name,
-.note-box-bottom .note-code,
-.note-box-bottom .note-tags {
-    word-wrap: break-word;
-    z-index: 1;
-}
 .note-box:hover {
     transform: scale(1.05);
 }
 
 .download-button {
     background: var(--color-white);
+    padding: 1rem;
+    border-radius: 10px;
 }
