--- a/Client/src/components/SearchPage.css
+++ b/Client/src/components/SearchPage.css
@@ -95,7 +95,6 @@ margin: 0 200px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     display: flex;
-    background-color: rgb(255, 255, 255, 0.25);
     z-index: 0;
     margin-top: 1rem;
     border: 1px solid var(--color-white);
@@ -113,7 +112,12 @@ margin: 0 200px;
     border-radius: 0px 0px 20px 20px;
 }
 
+.note-box-preview {
+    z-index: -2;
+}
+
 .note-box-bottom {
+    z-index: 2;
     margin-top: 10rem;
     flex-direction: column;
     overflow: hidden;
