--- a/Client/src/components/GroupsPage.css
+++ b/Client/src/components/GroupsPage.css
@@ -22,4 +22,28 @@
 
 .groups-row {
     width: 20rem;
+    height: 3rem;
+    border-radius: 10px;
+    background: var(--color-bg);
+}
+
+.btn-groups-row {
+    color: var(--color-white);
+    width: 20rem;
+    height: 3rem;
+    background: var(--color-bg);
+    display: flex;
+    align-items: center;
+}
+
+.groups-plus-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1.5rem;
+    height: 1.5rem;
+    color: var(--color-bg);
+    background: var(--color-white);
+    border-radius: 50%;
+    margin-right: 1rem;
 }
