--- a/Client/src/components/ClassesPage.css
+++ b/Client/src/components/ClassesPage.css
@@ -82,3 +82,30 @@ th {
 td {
     background-color: rgba(207, 62, 0, 0.7);
 }
+
+.search-results {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .search-result {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  
+  .search-result p {
+    margin: 0;
+    font-size: 18px;
+  }
+  
+  .search-result p:first-child {
+    font-weight: bold;
+  }
+  
+  .btn-create-class {
+    margin-top: 10px;
+  }
