--- a/Client/src/components/GroupsPage.css
+++ b/Client/src/components/GroupsPage.css
@@ -34,6 +34,7 @@
     background: var(--color-bg);
     display: flex;
     align-items: center;
+    border-radius: 10px;
 }
 
 .groups-plus-icon {
@@ -46,4 +47,13 @@
     background: var(--color-white);
     border-radius: 50%;
     margin-right: 1rem;
+}
+
+.groups-group-container {
+    margin: 1rem;
+    border: 3px solid var(--color-primary);
+    border-radius: 20px;
+    padding: 2rem;
+    display: flex;
+    flex: auto;
 }
