--- a/Client/src/components/ClassesPage.css
+++ b/Client/src/components/ClassesPage.css
@@ -10,9 +10,10 @@
 }
 
 .classes {
-    width: auto;
     margin-left: 1rem;
     margin-right: 1rem;
+    display: flex;
+    flex: auto;
 }
 
 .join-classes,
@@ -64,48 +65,57 @@ input[type=text].class-input {
     margin-left: 2rem;
 }
 
-table {
+.classes-table {
+    width: 100%;
     overflow: hidden;
-    border-collapse: collapse;
-    border-radius: 20px;
-    margin-left: 5rem;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 
-th, td {
-    padding: 1rem;
+.classes-table table {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0;
 }
 
-th {
-    background: var(--color-primary);
+.classes-table th,
+.classes-table td {
+    padding: 15px;
+    text-align: left;
 }
 
-td {
-    background-color: rgba(207, 62, 0, 0.7);
-}
-
-.search-results {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .search-result {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 10px;
-    text-align: center;
-  }
-  
-  .search-result p {
-    margin: 0;
-    font-size: 18px;
-  }
-  
-  .search-result p:first-child {
+.classes-table th {
     font-weight: bold;
-  }
+    background-color: var(--color-primary);
+}
   
-  .btn-create-class {
+.classes-table tr:last-child td {
+    border-bottom: none;
+    border-bottom: 2px solid var(--color-primary);
+}
+  
+.classes-table td {
+    background-color: var(--color-bg);
+    border: 2px solid var(--color-primary);
+}
+  
+.classes-table tr:hover td {
+    background-color: #0d0b187d;
+}
+  
+.classes-table tr td:first-child,
+.classes-table tr th:first-child {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+  
+.classes-table tr td:last-child,
+.classes-table tr th:last-child {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom: 2px solid var(--color-primary);
+}
+  
+.btn-create-class {
     margin-top: 10px;
-  }
+}
